feature : ajuste uso de imagenes en productos
